v4.7.0pre9
- FIX: Barrel crash when attaching routed pipes

v4.7.0pre8
- ADDED: Fuel Efficiency enchantment for jetpacks
- ADDED: Stock Keeper infinite stock option
- ADDED: Stock Keeper matching options
- FIX: Filtered Importer not saving filter
- FIX: Project Bench not pulling evenly from crafting slots
- FIX: Routed pipes only seeing top stack for barrels and deep storage units
- FIX: Items being routed to full inventories
- FIX: IC Gate crash when using 2D wire renderer
- FIX: IC NOT gates not cycling dead sides correctly
- CHANGE: Rebalanced motor power usage
- CHANGE: Rebalanced solar panel power generation

v4.7.0pre7
- ADDED: Project Bench
- ADDED: Auto Crafting Bench
- FIX: Filtered Importer merging unstackable items
- FIX: Lamps blocking mob spawning even when off
- FIX: Crafting tree reporting incorrent missing items
- FIX: Chip settings panels opening in inconvienient places
- CHANGE: Microblocks of inverted lamps will light up
- CHANGE: Crafting chip now extracts up to a stack
- CHANGE: Motors no longer continuously move blocks

v4.7.0pre6
- ADDED: Jetpack particles and models
- ADDED: Crafting Extension chip
- REMOVED: Routing chip upgrade system
- REMOVED: Routed Crafting pipe
- REMOVED: Routed Extension pipe
- FIX: Furnace recipe crash
- FIX: Inteface pipe keeping logic after removing chip
- FIX: Filtered importer destroying items
- FIX: Redstone not connecting to machines properly
- FIX: Analog IC IOs showing incorrect frequency in their guis
- FIX: Teleposer server crash
- CHANGE: Moved crafting logic from crafting pipe to chip
- CHANGE: Crafting chip can now be installed in any Interface pipe
- CHANGE: New routing fx

v4.7.0pre5
- ADDED: Cell gate IC parts
- ADDED: Creative mode IC Chip with instant and free prints
- ADDED: IC Blueprint reset recipe
- ADDED: IC Blueprint copy recipe
- FIX: IC Gates not updating neighbors properly
- FIX: IC Gates not recognizing white signal changes
- FIX: Crash when resource packs change lily textures